# Gesto

./: .gitignore  Cargo.toml  README.md  build.rs
src/: actions.rs  app.rs  config.rs  gesture.rs  http_server.rs  logging.rs  main.rs  overlay.rs  single_instance.rs  tray.rs  win.rs
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  gestureConflicts.ts  i18n.ts  index.css  main.tsx  types.ts
