[package]
name = 'gesto'
version = '0.1.0'
edition = '2024'

[dependencies]
anyhow = '1'
axum = { version = '0.8', features = ['json'] }
dirs = '6'
include_dir = '0.7'
mime_guess = '2'
once_cell = '1'
parking_lot = '0.12'
serde = { version = '1', features = ['derive'] }
serde_json = '1'
tiny-skia = '0.11'
tokio = { version = '1', features = [
  'macros',
  'net',
  'rt-multi-thread',
  'sync',
  'time',
] }
webbrowser = '1'
winreg = '0.55'
windows = { version = '0.62', features = [
  'Win32_Foundation',
  'Win32_Graphics_Gdi',
  'Win32_System_Diagnostics_Debug',
  'Win32_System_LibraryLoader',
  'Win32_System_Threading',
  'Win32_UI_HiDpi',
  'Win32_UI_Input_KeyboardAndMouse',
  'Win32_UI_Shell',
  'Win32_UI_WindowsAndMessaging',
] }

[profile.release]
codegen-units = 1 # 最大化优化，牺牲编译速度
lto = true        # 开启链接时优化 (Link Time Optimization)
opt-level = "z"   # 针对体积进行优化 (如果追求极致性能可改为 3)
panic = "abort"   # 移除 Panic 回溯信息，减小体积
# 注释掉以保留 panic 堆栈信息，便于调试闪退问题
strip = true # 自动剥离符号表
